--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,6 +14,9 @@ tauri-build = { version = "1", features = [] }
 tauri = { version = "1", features = [ "system-tray", "clipboard-read-text", "notification-all", "global-shortcut-all", "shell-open"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+reqwest = "0.12.5"
+copypasta = "0.10.1"
+url = "2.5.2"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
