--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,8 +15,8 @@ tauri = { version = "1", features = [ "system-tray", "clipboard-read-text", "not
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 reqwest = "0.12.5"
-copypasta = "0.10.1"
 url = "2.5.2"
+arboard = "3.4.0"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
