--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,12 +11,14 @@ edition = "2021"
 tauri-build = { version = "1", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = [ "system-tray", "clipboard-read-text", "notification-all", "global-shortcut-all", "shell-open"] }
+tauri = { version = "1", features = [ "fs-write-file", "fs-read-file", "system-tray", "clipboard-read-text", "notification-all", "global-shortcut-all", "shell-open"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-reqwest = "0.12.5"
+reqwest = { version = "0.12.5", features = ["json", "multipart"] }
 url = "2.5.2"
 arboard = "3.4.0"
+infer = "0.16.0"
+png = "0.17.13"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
